--- a/contact.css
+++ b/contact.css
@@ -3,9 +3,9 @@ body {
 }
 main {
     background-color: #e2e2c0;
-    margin-bottom: 188px;
+    margin-bottom: 50px;
     border-style: inset;
-    border-top-width: thick;
+    border-width: thick;
     
 }
 hr {
@@ -25,9 +25,23 @@ button {
 .nav-link {
     color: black;
 }
-.container {
-    border-top-style: inset;
-    border-top-width: thick;
+.emailP {
+    font-family: 'Staatliches';
+    /* background: #0e8dbc; */
+    color: black;
+    text-shadow: 0 1px 0 #ccc,
+                 0 2px 0 #c9c9c9,
+                 0 3px 0 #bbb,
+                 0 4px 0 #b9b9b9,
+                 0 5px 0 #aaa,
+                 0 6px 1px rgba(0,0,0,.1),
+                 0 0 5px rgba(0,0,0,.1),
+                 0 1px 3px rgba(0,0,0,.3),
+                 0 3px 5px rgba(0,0,0,.2),
+                 0 5px 10px rgba(0,0,0,.25),
+                 0 10px 10px rgba(0,0,0,.2),
+                 0 20px 20px rgba(0,0,0,.15);
+
 }
 
  
