--- a/portfolio.css
+++ b/portfolio.css
@@ -3,6 +3,8 @@ hr {
 }
 main {
      margin-bottom: 78px;
+     border-style: inset;
+     border-top-width: thick;
 }
 body {
     background-color: #6B6B6A;
