--- a/assets/contact.css
+++ b/assets/contact.css
@@ -43,5 +43,9 @@ button {
                  0 20px 20px rgba(0,0,0,.15);
 
 }
-
+.navbar-toggler-icon {
+    color: white;
+    background-color: black;
+   
+}
  
