--- a/assets/about_me.css
+++ b/assets/about_me.css
@@ -1,12 +1,13 @@
 body {
-    background-color: #6B6B6A;
+    background-image: linear-gradient(40deg, #b1d685 14.29%, #335c33 14.29%, #335c33 50%, #b1d685 50%, #b1d685 64.29%, #335c33 64.29%, #335c33 100%);
+background-size: 43.56px 36.55px;
 }
 hr {
     width: 100%;
 }
 main {
     margin-bottom: 80px;
-    background-color: #e2e2c0;
+    background-color: #353509;
     border-style: inset;
     border-width: thick;
     /* background-color: #e2e2c0; */
@@ -54,3 +55,27 @@ img {
     background-color: black;
    
 }
+.pencil-effect {
+    background-image: url("/assets/IMG_1527.jpg");
+    background-size: cover;
+    background-position: center;
+  }
+  
+  @supports (filter: invert(1)) and (background-blend-mode: difference) {
+    .pencil-effect {
+      background-image: url("/assets/IMG_1527.jpg"), url("/assets/IMG_1527.jpg");
+      background-blend-mode: difference;
+      background-position: calc(50% - 1px) calc(50% - 1px), calc(50% + 1px) calc(50% + 1px);
+      filter: brightness(2) invert(1) grayscale(1);
+      box-shadow: inset 0 0 0 1px black;
+    }
+  }
+
+  .insideBackground {
+    background-image: linear-gradient(40deg, #b1d685 14.29%, #335c33 14.29%, #335c33 50%, #b1d685 50%, #b1d685 64.29%, #335c33 64.29%, #335c33 100%);
+    background-size: 43.56px 36.55px;
+  }
+  .imgBorder {
+      border: 5px solid #032603;
+  }
+  
