--- a/assets/contact.css
+++ b/assets/contact.css
@@ -1,8 +1,9 @@
 body {
-    background-color: #6B6B6A;
+    background-image: linear-gradient(40deg, #b1d685 14.29%, #335c33 14.29%, #335c33 50%, #b1d685 50%, #b1d685 64.29%, #335c33 64.29%, #335c33 100%);
+background-size: 43.56px 36.55px;
 }
 main {
-    background-color: #e2e2c0;
+    background-color: #353509;
     margin-bottom: 50px;
     border-style: inset;
     border-width: thick;
@@ -48,4 +49,15 @@ button {
     background-color: black;
    
 }
+.cardShadow {
+    box-shadow:
+    0 6.9px 1.5px rgba(0, 0, 0, 0.027),
+    0 11.5px 3.9px rgba(0, 0, 0, 0.036),
+    0 14.7px 8.2px rgba(0, 0, 0, 0.042),
+    0 17.3px 19.4px rgba(0, 0, 0, 0.048),
+    0 20px 30.5px rgba(0, 0, 0, 0.055),
+    0 23.2px 35.2px rgba(0, 0, 0, 0.067),
+    0 27px 38px rgba(0, 0, 0, 0.1)
+  ;
+ }
  
